--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,11 @@
 #ignore node_modules, as the node project is not "deployed" per se: http://www.mikealrogers.com/posts/nodemodules-in-git.html
 /node_modules
 
+#ignore bower
+/vendor/bower
+
 /dist
 /generated
+.directory
+.sass-cache/
+
