--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "devDependencies": {
     "coffee-script": "^1.6.3",
+    "grunt": "^0.4.5",
+    "grunt-slim": "^0.1.0",
     "jasmine-given": "^2.6.2",
     "jquery": "^2.1.3",
     "lineman": "^0.34.4",
     "lineman-angular": "^0.3.0",
     "lineman-foundation": "^0.1.12",
     "lineman-rails": "^0.1.0",
-    "protractor": "^1.4.0"
+    "protractor": "^1.4.0",
+    "grunt-slim": "^0.1.0"
   },
   "scripts": {
     "start": "lineman run",
